Extracted encoding/decoding to seperate utility, improved error handling, added `turn` command, fixed issue with UUID handling changes, removed unneeded methods across the board, added Pair utility class, fixed capturing/placing of Directional blocks, changed so modifications just reimport as tweaked header rather than modifying selection grid, fixed ManipulatablePosition.next() reset behaviour, Moved complex block dadta capture to MaterialData class, moved Dimension enum to seperate class, updated documentation all over, and a partridge in a pear tree